# rubin

./: CLAUDE.md  Dockerfile  README.md  TODO.md  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/rubin/: __init__.py  __main__.py  analyzer.py  client.py  evaluator.py  server.py
styles/: ambient.json  downtempo.json  drum-and-bass.json  edm.json  folk.json  hip-hop.json  house.json  industrial.json  jazz.json  lo-fi.json  orchestral.json  rnb.json  rock.json  synthpop.json  techno.json  vaporwave.json
tests/: conftest.py  test_analyzer.py  test_evaluator.py  test_tools.py
